--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My first Github repository</title>
 </head>
 <body>
-    
+    <h1>First Github repository</h1>
+    <h2>I'm excited to use Github</h2>
+    <h2>This is a new experience</h2>
 </body>
 </html>
