--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>First Github repository</h1>
     <h2>I'm excited to use Github</h2>
     <h2>This is a new experience</h2>
+    <h3>Github is awesome</h3>
+    <h3>I can store my Code in Github</h3>
 </body>
 </html>
