--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first Github repository</title>
+    <title>My First Github Repository</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
         <p>Imran Khan (born 28 May 1984) is a Dutch-Pakistani[1] singer and songwriter. He became known in 2007 after his first single "Ni Nachleh" produced by Eren E.[2] Khan was signed to Prestige Records in late 2007, and released the single "Ni Nachleh" on the label.[2] His second single, "Amplifier" produced by Eren E was released on 13 July 2009, and later several others. His song "Satisfya" is his most viewed video till date for over 600 million+ views. His debut 15-track album Unforgettable was released on 27 July 2009 via Prestige Records,[3] produced by Eren E and Hakan Ozan.</p>
         <img src="imran wesds.jpg" alt="">
         <h3>They don't know</h3>
+        <h3>They didn't saw me coming</h3>
     </div>
 </body>
 </html>
